--- a/public/comum/css/main.css
+++ b/public/comum/css/main.css
@@ -331,6 +331,9 @@ h3 {
 .chzn-container {
     float: left;
 }
+.error{
+    border-color: #d30000 !important;
+}
 
 /* Footer ---------------------------------------- */
 
