Criado banco de dados e definidos novos metodos de chamadas dos modulos no menu, sendo chamados da tabela do banco de dados.

--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -1,6 +1,13 @@
 header{
 	height: 0px;
 }
+.corpo{
+    width: 400px;
+    position: absolute;
+}
+.img_logo{
+    padding-bottom: 30px; 
+}
 .corpo_login{
 	background-color: #eeeeee;
 	position: absolute;
